# ascrubber

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.optionparser  README.md  ascrubber.kdev4  flacscrubber.cpp  flacscrubber.h  main.cpp
CMake/: FindFLAC.cmake  LICENSE.FindFLAC
